--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,3 +15,10 @@ sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
   twitter: dinesh_MKD
   url: https://github.com/SilleBille/
+
+youssef:
+  name: Youssef Mahfoudh
+  twitter: Def0ultBng
+  url: https://github.com/Def0ultBug/
+
+
