--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://Def0ultBug.github.io"
+url: "https://def0ultbug.github.io"
 
 github:
   username: Def0ultBug # change to your GitHub username
